# work-show

./: .gitignore  GEMINI.md  README.md  app.py  get_data.py  init_project.py  main.py  pyproject.toml  requirements.txt
config/: settings.ymal.example
prompt/: res2sql.md
sql/: create_table.sql
src/work_show/: __init__.py
src/work_show/core/: models.py  protocols.py
src/work_show/data_clean/: mapping_table.py
src/work_show/deduplicator/: set_deduplicator.py
src/work_show/engine/: crawler.py
src/work_show/sources/: jsonl_file.py  sqlite.py  web_alibaba_campus.py  web_alibaba_social.py  web_bytedance_campus.py  web_bytedance_social.py  web_jingdong_campus.py  web_jingdong_social.py  web_kuaishou_campus.py  web_kuaishou_campus_fulltime.py  web_kuaishou_campus_intern.py  web_kuaishou_social.py  web_meituan.py  web_pdd_social.py  web_tencent_campus.py  web_tencent_social.py  web_xiaomi_campus.py  web_xiaomi_internship.py  web_xiaomi_social.py
src/work_show/storage/: sql_storage.py
src/work_show/utils/: call_llm.py  logger.py
test/core/: test_core.py
test/utils/: test_call_llm.py
