[project]
name = "work-show"
version = "0.1.0"
description = "获取招聘信息并进行可视化"
readme = "README.md"
authors = [
    { name = "wuwen", email = "stevewuwen@qq.com" }
]
requires-python = ">=3.12"
dependencies = [
    "drissionpage>=4.1.1.2",
    "google-genai>=1.58.0",
    "jsonpath-ng>=1.7.0",
    "litellm>=1.80.16",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "rich>=14.2.0",
    "socksio>=1.0.0",
    "streamlit>=1.53.1",
    "streamlit-echarts>=0.4.0",
    "wordcloud>=1.9.6",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
